// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly not pressable 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#007398",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "lineHeight": 24,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Bold",
        "fontSize": 16,
        "fontStyle": "normal",
        "letterSpacing": 1,
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
    ]
  }
>
  Test Person
</Text>
`;

exports[`renders correctly with name 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "opacity": 1,
    }
  }
  testID="NameButton"
>
  <Text
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        },
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Bold",
          "fontSize": 16,
          "fontStyle": "normal",
          "letterSpacing": 1,
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        },
      ]
    }
  >
    Test Person
  </Text>
</View>
`;

exports[`renders correctly without name 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#007398",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "lineHeight": 24,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Bold",
        "fontSize": 16,
        "fontStyle": "normal",
        "letterSpacing": 1,
        "lineHeight": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
    ]
  }
>
  MissionHub user
</Text>
`;
